--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 *{
     margin: 0;
     padding: 0;
+    font-family:cursive;
+    font-size: larger;
 }
+
 body{
     background: url(fundoMadeira.jpg) no-repeat;
     background-size: cover;
 }
-h1{
-    font-family: 'Times New Roman', Times, serif;
-}
 main{
     margin: 25px;
+    padding: 25px;
     background-color: rgba(163, 153, 133, 0.671);
     box-shadow: 15px 13px 25px;
     border-radius: 20px;
@@ -48,16 +49,8 @@ picture#logoTwitter img{
     margin: auto;
 }
 section{
-    max-width: 280px;
     margin: auto;
     padding: 25px;
-}
-section#intro p{
-    font-family:cursive;
-    font-size: larger;
-}
-section p{
-    font-family: Arial, Helvetica, sans-serif;
 }
 ul{
     columns: 1;
@@ -98,9 +91,11 @@ ul#links img{
    padding: 25px;
 }
 .aspectosOFoxing{
-    max-width: 200px;
     margin: auto;
+
 }
-li#netlix{
+button{
     display: flex;
+    margin: auto;
+    border-radius: 25px;
 }
