--- a/style.css
+++ b/style.css
@@ -35,17 +35,17 @@ picture#logoPK img{
 }
 picture#logoNetflix img{
     display: block;
-    width: 50px;
+    max-width: 50px;
     margin: auto;
 }
 picture#bugdroid img{
     display: block;
-    width: 50px;
+    max-width: 50px;
     margin: auto;
 }
 picture#logoTwitter img{
     display: block;
-    width: 50px;
+    max-width: 50px;
     margin: auto;
 }
 section{
