--- a/style.css
+++ b/style.css
@@ -2,9 +2,8 @@
     margin: 0;
     padding: 0;
     font-family:cursive;
-    font-size: larger;
+    font-size: large;
 }
-
 body{
     background: url(fundoMadeira.jpg) no-repeat;
     background-size: cover;
