--- a/style.css
+++ b/style.css
@@ -48,7 +48,8 @@ picture#logoTwitter img{
     max-width: 50px;
     margin: auto;
 }
-section{
+section#intro{
+    font-size: larger;
     margin: auto;
     padding: 25px;
 }
@@ -71,9 +72,11 @@ ul#picturePerfil{
     max-width: 320px;
 }
 aside{
+    max-width: 350px;
     padding: 25px;
     box-shadow: 10px 10px 25px;
     border-radius: 25px;
+    margin-bottom: 50px;
 }
 aside p{
     padding: 5px;
