--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-size: large;
 }
 body{
-    background: url(fundoMadeira.jpg) no-repeat;
+    background: url(https://img.freepik.com/fotos-premium/copyspace-com-decoracao-floral_664601-7308.jpg?w=900) no-repeat;
     background-size: cover;
 }
 main{
