--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@
     font-family: monospace;
     font-size: large;
 }
-h1#pai,
-button,
 img {
     box-shadow: 15px 13px 25px;
 }
@@ -81,6 +79,8 @@ label{
     float: right;
     margin: auto;
     background-color: rgba(0, 0, 0, 0.774);
+    padding: 5px;
+    border-radius: 80px;
 }
 article#primeiro {
     font-size: xx-large;
@@ -105,7 +105,6 @@ aside {
     width: 100%;
     margin: auto;
 }
-
 article {
     justify-content: space-around;
     align-items: center;
