--- a/style.css
+++ b/style.css
@@ -3,12 +3,9 @@
     padding: 0;
     color: white;
     font-family: monospace;
-    text-align: center;
     font-family: monospace;
     font-size: large;
 }
-img {
-    box-shadow: 15px 13px 25px;
 }
 h1{
     font-size: larger;
@@ -20,11 +17,10 @@ body {
 main {
     background-attachment: fixed;
 }
-
 picture img {
     display: inline-block;
     max-width: 200px;
-    border-radius: 200px;
+    border-radius: 360px;
     margin: auto;
     margin-bottom: 25px;
 }
@@ -40,9 +36,7 @@ picture#links img {
 
 picture#logoPK img {
     width: 100%;
-    margin: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 20px;
     border-radius: 20px;
 }
 
@@ -56,7 +50,7 @@ button picture img {
     margin: 5px;
 }
 
-section {
+section{
     border-radius: 20px;
     margin: 15px;
     padding: 15px;
@@ -67,13 +61,6 @@ section#forMain {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-}
-
-.forMain {
-    max-width: 600px;
-    margin: auto;
-    background-color: rgba(0, 0, 0, 0.623);
-    border-radius: 20px;
 }
 label{
     float: right;
@@ -87,19 +74,6 @@ article#primeiro {
     font-family: cursive;
     width: 100%;
 }
-
-aside {
-    margin: 15px;
-    padding: 15px;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.projetos {
-    justify-content: space-around;
-    align-items: center;
-}
-
 .projetos0 {
     display: contents;
     width: 100%;
@@ -110,14 +84,15 @@ article {
     align-items: center;
 }
 footer {
+    text-align: center;
     font-size: larger;
-    background-color: darkgoldenrod;
+    background-color: rgba(114, 83, 5, 0.123);
     padding: 10px;
     padding-bottom: 80px;
 }
 footer a {
     color: white;
 }
-fieldset{
-    
+footer > article {
+background-color: rgba(0, 0, 0, 0.432);
 }
