--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family: monospace;
     font-family: monospace;
     font-size: large;
+    background-color: rgba(0, 0, 0, 0.144);
 }
 }
 h1{
@@ -27,6 +28,7 @@ button#ixd01{
     margin: 15vh;
     padding: 10px;
     border-radius: 25px;
+    color: white;
 }
 footer {
     text-align: center;
