--- a/style.css
+++ b/style.css
@@ -2,34 +2,48 @@
     margin: 0;
     padding: 0;
     font-family: monospace;
-    font-family: monospace;
     font-size: large;
-    background-color: rgba(0, 0, 0, 0.144);
 }
-}
-h1{
+
+h1 {
     font-size: larger;
     font-family: cursive;
 }
+
+p {
+    margin: 10px;
+}
+
 body {
     background-image: url('fdmain01.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
-main{
+
+main {
     padding: 25px;
     color: white;
     font-size: large;
+    background-color: rgba(0, 0, 0, 0.144);
 }
-p{
-margin: 10px;
-}
-button#ixd01{
+
+button#ixd01 {
     margin: 15vh;
     padding: 10px;
     border-radius: 25px;
     color: white;
 }
+
+picture#digital {
+    display: flex;
+}
+
+picture#digital img {
+    width: 35px;
+    margin-right: 10px;
+    border-radius: 360px;
+}
+
 footer {
     text-align: center;
     font-size: larger;
@@ -38,9 +52,11 @@ footer {
     padding-bottom: 80px;
     color: white;
 }
+
 footer a {
     color: white;
 }
-footer > article {
-background-color: rgba(0, 0, 0, 0.432);
+
+footer>article {
+    background-color: rgba(0, 0, 0, 0.432);
 }
