--- a/style.css
+++ b/style.css
@@ -28,10 +28,11 @@ main {
 }
 
 button#ixd01 {
-    margin: 15vh;
+    display: flex;
+    margin: auto;
     padding: 10px;
     border-radius: 25px;
-    color: white;
+    color: black;
 }
 
 picture#digital {
@@ -59,4 +60,5 @@ footer a {
 
 footer>article {
     background-color: rgba(0, 0, 0, 0.432);
+    padding: 5px;
 }
