--- a/style.css
+++ b/style.css
@@ -1,19 +1,14 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: monospace;
-    font-size: large;
     border-radius: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
 }
 
 a {
     color: white;
     border-radius: 360px;
-}
-
-h1 {
-    font-size: larger;
-    font-family: cursive;
 }
 
 p {
@@ -29,41 +24,35 @@ body {
 
 main {
     padding: 25px;
-    font-size: large;
 }
 
 section {
+    background-color: rgba(0, 0, 0, 0.863);
     margin: auto;
+    margin-top: 25px;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.432);
+    max-width: 900px;
 }
 
 aside {
-    margin: 15px;
+   background-color: rgba(0, 0, 0, 0.863);
+    margin-top: 25px;
 }
 
 button {
     display: flex;
     margin: auto;
     padding: 10px;
-    color: black;
     background-color: rgba(104, 104, 104, 0.39);
-}
-
-picture#digital {
-    display: flex;
-}
-
-picture#digital img {
-    width: 35px;
-    margin-right: 10px;
-    border-radius: 360px;
 }
 
 footer {
     text-align: center;
-    font-size: larger;
     padding: 10px;
     padding-bottom: 80px;
     color: white;
+}
+
+#digital img {
+    max-width: 90px;
 }
