--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 a {
     color: white;
     border-radius: 360px;
+    margin: auto;
 }
 
 p {
@@ -40,9 +41,8 @@ aside {
 }
 
 button {
-    display: flex;
     margin: auto;
-    padding: 10px;
+    padding: 5px;
     background-color: rgba(104, 104, 104, 0.39);
 }
 
