--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 * {
     margin: 0;
     padding: 0;
-    border-radius: 25px;
-    font-family: Arial, Helvetica, sans-serif;
+ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: x-large;
 }
 
 a {
     color: white;
-    border-radius: 360px;
     margin: auto;
 }
-
+h1{
+color: aquamarine;
+}
 p {
     margin: 10px;
 }
@@ -50,6 +50,7 @@ button {
     margin: auto;
     padding: 5px;
     background-color: rgba(104, 104, 104, 0.39);
+    border-radius: 25px;
 }
 
 footer {
@@ -64,4 +65,5 @@ footer {
 }
 iframe{
 width: 100%;
+    height: 70vh;
 }
