--- a/style.css
+++ b/style.css
@@ -14,12 +14,6 @@ button ,a {
     margin: 15px;
     color: white;
 }
-h1{
-color: aquamarine;
-}
-p {
-    margin: 10px;
-}
 
 body {
     background-image: url('fdmain01.png');
@@ -29,9 +23,6 @@ body {
 }
 .interface{
     background-color: rgba(0, 0, 0, 0.582);
-}
-h1, h2{
-font-size: xx-large;
 }
 main {
    
@@ -64,4 +55,7 @@ footer {
 iframe{
 width: 100%;
     height: 70vh;
+}
+#br img{
+    max-width: 45px;
 }
