--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
- font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: x-large;
 }
 
@@ -57,5 +57,5 @@ width: 100%;
     height: 70vh;
 }
 #br img{
-    max-width: 45px;
+    max-width: 35px;
 }
