--- a/style.css
+++ b/style.css
@@ -4,38 +4,41 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: x-large;
 }
-button ,a {
+
+a {
+    color: white;
+    text-decoration: none;
+    margin: 10 px;
+}
+
+button {
     margin: auto;
     padding: 5px;
     border-radius: 25px;
     text-decoration: none;
     margin: 15px;
-  color: black;
+    color: black;
 }
+
 body {
     background-image: url('fdmain01.png');
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
 }
-.interface{
-    background-color: rgba(0, 0, 0, 0.582);
-}
-main {
-   
-    padding: 25px;
-}
+
 section {
     margin: auto;
-    margin-top: 25px;
     padding: 5px;
     max-width: 900px;
     text-align: center;
 }
+
 aside {
-   background-color: rgba(0, 0, 0, 0.863);
+    background-color: rgba(0, 0, 0, 0.863);
     margin-top: 25px;
 }
+
 footer {
     text-align: center;
     padding: 10px;
@@ -46,16 +49,44 @@ footer {
 #digital img {
     max-width: 90px;
 }
-iframe{
-width: 100%;
+
+iframe {
+    width: 100%;
     height: 70vh;
 }
-#br img{
+
+#br img {
     max-width: 35px;
 }
-footer img{
+
+footer img {
     max-width: 45px;
 }
-img{
+
+img {
     margin: auto;
+}
+
+picture#moon img {
+    margin: auto;
+    margin-left: 80%;
+}
+
+ul li {
+    display: inline-block;
+    list-style: none;
+}
+
+nav ul li {
+    background-color: white;
+    color: black;
+    border: 2px solid gray;
+    border-radius: 15px;
+    padding: 10px;
+}
+section{
+    margin-top: 50px;
+}
+button{
+    color: black;
 }
