--- a/style.css
+++ b/style.css
@@ -27,11 +27,19 @@ body {
     color: white;
 }
 
+div.interface {
+    padding: 15px;
+}
+
 section {
     margin: auto;
-    padding: 5px;
+    margin-top: 50px;
     max-width: 900px;
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.76);
+    color: black;
+    border-radius: 15px;
+    padding: 15px;
 }
 
 aside {
@@ -72,9 +80,42 @@ picture#moon img {
 
 }
 
+button {
+    color: black;
+}
+
+picture#redesSociais img {
+    display: inline-block;
+    margin: 15px;
+    max-width: 45px;
+}
+
+picture#verificado img {
+    max-width: 35px;
+}
+
+h1 {
+    text-align: justify;
+    margin-top: 15px;
+}
+
+picture#dinheiro img {
+    max-width: 35px;
+}
+
+picture#grafico img {
+    display: block;
+}
+
 ul li {
     display: inline-block;
     list-style: none;
+}
+
+nav {
+    margin: 15px;
+    justify-content: center;
+    text-align: center;
 }
 
 nav ul li {
@@ -83,29 +124,5 @@ nav ul li {
     border: 2px solid gray;
     border-radius: 15px;
     padding: 10px;
-}
-section{
-    margin-top: 50px;
-    background-color: rgba(255, 255, 255, 0.692);
-    color: black;
-    border-radius: 15px;
-    padding: 15px;
-}
-button{
-    color: black;
-}
-picture#redesSociais img{
-    display: inline-block;
-    margin: 15px;
-    max-width: 45px;
-}
-picture#verificado img{
-    max-width: 35px;
-}
-h1{
-    text-align: justify;
-    margin-top: 15px;
-}
-picture#dinheiro img{
-    max-width: 35px;
+    margin: 5px;
 }
