--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ section {
     margin: auto;
     margin-top: 50px;
     max-width: 900px;
-    text-align: center;
     background-color: rgba(255, 255, 255, 0.76);
     color: black;
     border-radius: 15px;
@@ -46,7 +45,7 @@ aside {
     margin-top: 25px;
 }
 
-footer {
+footer > p {
     text-align: center;
     padding: 10px;
     padding-bottom: 80px;
@@ -63,6 +62,13 @@ iframe {
 }
 
 #br img {
+    display: block;
+    float: right;
+    max-width: 125px;
+}
+picture#grafico img {
+    display: block;
+    float: left;
     max-width: 125px;
 }
 
@@ -94,16 +100,11 @@ picture#verificado img {
 }
 
 h1 {
-    text-align: justify;
     margin-top: 15px;
 }
 
 picture#dinheiro img {
     max-width: 35px;
-}
-
-picture#grafico img {
-    display: block;
 }
 
 nav {
