--- a/style.css
+++ b/style.css
@@ -18,10 +18,6 @@ button {
     margin: 15px;
 }
 
-div.interface {
-    padding: 15px;
-}
-
 section {
     margin: auto;
     background-color: rgba(255, 255, 255, 0.76);
@@ -50,15 +46,13 @@ iframe {
     height: 70vh;
 }
 
-#br img {
+picture#br img {
     display: block;
-    float: right;
-    max-width: 125px;
+    width: 125px;
 }
 
 picture#grafico img {
     display: block;
-    float: left;
     max-width: 125px;
 }
 
@@ -80,9 +74,13 @@ button {
     color: black;
 }
 
+picture#redesSociais{
+margin: auto;
+text-align: center;
+max-width: 300px;
+}
 picture#redesSociais img {
     display: inline-block;
-    margin: 15px;
     max-width: 45px;
 }
 
@@ -116,4 +114,7 @@ nav ul li {
 picture#miniLogoProjetos img {
     border-radius: 15px;
     max-width: 45px;
+}
+picture#InformationTechnology img{
+    width: 100%;
 }
