--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     color: black;
 }
 
+header{
+    background-color: #230D73;
+    color: white;
+}
+
 a {
     text-decoration: none;
 }
@@ -21,7 +26,6 @@ button {
 section {
     margin: auto;
     background-color: rgba(255, 255, 255, 0.76);
-    color: black;
     border-radius: 15px;
     padding: 15px;
 }
@@ -77,7 +81,7 @@ button {
 picture#redesSociais{
 margin: auto;
 text-align: center;
-max-width: 300px;
+justify-content: center;
 }
 picture#redesSociais img {
     display: inline-block;
@@ -90,6 +94,8 @@ picture#verificado img {
 }
 
 h1 {
+    text-align: center;
+    color: #230D73;
     margin-top: 15px;
 }
 
@@ -105,9 +111,8 @@ nav {
 nav ul li {
     display: inline-block;
     list-style: none;
-    background-color: white;
-    border: 2px solid gray;
-    border-radius: 15px;
+
+    color:white;
     padding: 5px;
 }
 
