--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:sans-serif ;
     font-size: x-large;
     color: black;
 }
 
-header{
+header {
     background-color: #230D73;
     color: white;
 }
@@ -78,11 +78,12 @@ button {
     color: black;
 }
 
-picture#redesSociais{
-margin: auto;
-text-align: center;
-justify-content: center;
+picture#redesSociais {
+    margin: auto;
+    text-align: center;
+    justify-content: center;
 }
+
 picture#redesSociais img {
     display: inline-block;
     max-width: 45px;
@@ -90,7 +91,6 @@ picture#redesSociais img {
 
 picture#verificado img {
     max-width: 35px;
-    float: left;
 }
 
 h1 {
@@ -112,7 +112,7 @@ nav ul li {
     display: inline-block;
     list-style: none;
 
-    color:white;
+    color: white;
     padding: 5px;
 }
 
@@ -120,6 +120,11 @@ picture#miniLogoProjetos img {
     border-radius: 15px;
     max-width: 45px;
 }
-picture#InformationTechnology img{
+
+picture#InformationTechnology img {
     width: 100%;
+}
+
+.flex {
+    display: flex;
 }
