--- a/style.css
+++ b/style.css
@@ -22,10 +22,11 @@ button {
 }
 
 section {
-    margin: auto;
-    background-color: rgba(255, 255, 255, 0.76);
+    margin: 25px;
+    background-color:#230D73;
+color: white;
     border-radius: 15px;
-    padding: 15px;
+    padding: 50px;
 }
 
 aside {
