--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family:sans-serif ;
+    font-family: sans-serif;
     font-size: x-large;
 }
 
@@ -23,8 +23,8 @@ button {
 
 section {
     margin: 25px;
-    background-color:#230D73;
-color: white;
+    background-color: #230D73;
+    color: white;
     border-radius: 15px;
     padding: 50px;
 }
@@ -96,14 +96,25 @@ picture#dinheiro img {
     max-width: 35px;
 }
 
+nav {
+    background-color: black;
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-around;
+    padding: 15px;
+}
+
 nav ul li {
-    display: inline-block;
+    display: block;
     list-style: none;
+    border-left: 1px solid gray ;
+    border-right: 1px solid gray ;
+}
+
+nav ul li a {
     color: white;
-    border: #230D73 2px solid;
-    border-radius: 5px;
-    padding: 3px;
-    margin: 5px;    
 }
 
 picture#miniLogoProjetos img {
@@ -118,16 +129,19 @@ picture#InformationTechnology img {
 .flex {
     display: flex;
 }
-picture#predio img{
+
+picture#predio img {
     display: block;
     width: 100%;
 }
-video{
+
+video {
     display: block;
     width: 100%;
     margin: auto;
 }
-.video{
+
+.video {
     display: block;
     width: 100%;
     height: 100vh;
