--- a/style.css
+++ b/style.css
@@ -138,6 +138,11 @@ video {
     display: block;
     width: 100%;
     margin: auto;
+    
+}
+video::-internal-media-controls
+{ 
+    display: none;
 }
 
 .video {
