--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     font-family: sans-serif;
     font-size: x-large;
 }
-
+.interface{
+    padding: 15px;
+}
 header {
     color: white;
 }
@@ -103,22 +105,21 @@ nav {
 
 nav ul {
     display: flex;
+    background-color: #230D73;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 nav ul li {
     display: block;
     margin: auto;
-    margin-top: 5px;
     padding: 2px;
     list-style: none;
-    background-color: #230D73;
-    border-radius: 15px;
     font-size: medium;
     justify-content: space-between;
 }
 
 nav ul li a {
-    color: white;
+    color: gold;
 }
 
 picture#miniLogoProjetos img {
@@ -143,7 +144,6 @@ video {
     display: block;
     width: 100%;
     margin: auto;
-
 }
 
 .video {
@@ -151,4 +151,13 @@ video {
     width: 100%;
     height: 100vh;
     background-color: #230D73;
+}
+#btnWhatsapp {
+    position: fixed;
+    top: 89vh;    
+}
+#btnWhatsapp img {
+    display: block;
+    margin: auto;
+    max-width: 400px;
 }
