--- a/templates/formulario de inscrição.html
+++ b/templates/formulario de inscrição.html
@@ -6,8 +6,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="logoPK.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../static/style.css" />
+    <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
     <title>Portifolio</title>
 </head>
 
@@ -26,12 +26,12 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">
+                    <a href="../index.html">
                         HOME
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="cursos.html">
                         CURSOS
                     </a>
                 </li>
