--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -15,9 +15,9 @@
     <picture id="btnWhatsapp">
         <a href="https://maper.info/29j736" target="_blank">
             <video muted autoplay loop>
-                <source src="FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
+                <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
                     style="video::internal-media-controls{display: none;}">
-                <source src="FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
+                <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
                     style="video::internal-media-controls{display: none;}">
             </video>
         </a>
@@ -48,24 +48,27 @@
             </ul>
         </nav>
     </header>
-    <ul id="cursos">
-        <label for="">
-            <li>IOT - INTERNET DAS COISAS</li>
-            <a href="IOT.html"><video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay></video></a>
-        </label>
-        <label for="">
-            <li>MARCAÇÕES HTML E CSS</li>
-            <a href="marcações.html"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay></video></a>
-        </label>
-        <label for="">
-            <li>PROGRAMANDO EM PYTHON</li>
-            <a href="python.html"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted autoplay></video></a>
-        </label>
-        <label for="">
-            <li>PROGRAMANDO EM JAVA SCRIPT</li>
-            <a href="javascript.html"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay></video></a>
-        </label>
-    </ul>
+    <section class="finalizar">
+            <h1>PROGRAMANDO EM JAVA SCRIPT</h1>
+<img src="../static/PROGRAMANDO EM JAVA SCRIPT 00.png" alt="">        
+    <h1>Valor do certifidado</h1>
+    <p>19,90</p>
+    <label for="">
+        Atenção, é de extrema importancia enviar o comprovante para equipe de suporte para finalizar a compra.
+    </label>
+    <h1>JavaScript</h1>
+    <p>Linguagem de programação que permite adicionar interatividade ao site, como animações, menus suspensos, validação de formulários e jogos.</p>
+      <h2>Habilidades para desenvolver sites em mobile e PC</h2>
+    
+      <section>
+        <h3>Linguagem de programação</h3>
+        <p><strong>JavaScript:</strong> Permite adicionar interatividade ao site, como animações, menus suspensos, validação de formulários e jogos.</p>
+      </section>
+    
+      <section>
+        <h3>Frameworks e bibliotecas</h3>
+        <p>Ferramentas que facilitam o desenvolvimento, fornecendo código pré-escrito para funcionalidades comuns, como sliders, galerias de imagens e carrosséis.</p>
+      </section>
+     
+</section> 
 </body>
-
-</html>
